--- a/index.html
+++ b/index.html
@@ -4,47 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Calculadora Inversión</title>
   </head>
   <body>
     <div class="container">
-      <section>
+      <section class="box-data">
         <h1>Calculadora Inversión</h1>
-        <article>
+        <article class="box-data_title">
           <h3>Instrucciones:</h3>
-          <div>
-            <h4>Valor Futuro:</h4>
-            <p>
-              Llenar los campos de Valor Presente, Interes y Periodos. Luego
-              clic en calcular.
-            </p>
-          </div>
-          <div>
-            <h4>Interes:</h4>
-            <p>
-              Llenar los campos de Valor Presente, Periodos y Valor Futuro.
-              Luego clic en calcular.
-            </p>
-          </div>
+          <p>Digitar 3 de los campos solicitados.</p>
         </article>
-        <form>
-          <label for="presentValue">
-            <input
-              id="presentValue"
-              type="number"
-              placeholder="Valor Presente"
-            />
-          </label>
-          <label for="interest">
-            <input id="interest" type="number" placeholder="Interes" />
-          </label>
-          <label for="periods">
-            <input id="periods" type="number" placeholder="Periodos" />
-          </label>
-          <label for="futureValue">
-            <input id="futureValue" type="number" placeholder="Valor Futuro" />
-          </label>
+        <form class="box-data_form">
+          <label for="presentValue"> Valor Presente: </label>
+          <input id="presentValue" type="number" placeholder="Valor Presente" />
+          <label for="interest"> Interes: </label>
+          <input id="interest" type="number" placeholder="Interes" />
+          <label for="periods"> Periodos: </label>
+          <input id="periods" type="number" placeholder="Periodos" />
+          <label for="futureValue"> Valor Futuro: </label>
+          <input id="futureValue" type="number" placeholder="Valor Futuro" />
           <button id="calculateFutureValue">Calcular</button>
+          <button id="cleanWindow">Limpiar</button>
         </form>
       </section>
     </div>
