se corrigen los estilos. Se agrega el header y footer.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <title>Calculadora Inversión</title>
   </head>
   <body>
-    <div class="container">
+    <header class="header">
+      <p>Ejercicio</p>
+    </header>
+    <main class="container">
       <section class="box-data">
         <article class="box-data_title">
           <h1>Calculadora De Inversión</h1>
@@ -47,7 +50,10 @@
           <button id="cleanWindow">Limpiar</button>
         </form>
       </section>
-    </div>
+    </main>
+    <footer class="footer">
+      <p>Kannder83</p>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
