se agrega vista en movil.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header">
-      <p>Ejercicio</p>
+      <p>EJERCICIO</p>
     </header>
     <main class="container">
       <section class="box-data">
